--- a/index.html
+++ b/index.html
@@ -1,12 +1,159 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+  <body>
+    <header class="page-header">
+      <a class="page-header-logo" href="index.html" aria-current="page">
+        <img class="logo-image" src="#" alt="Логотип города Седона">
+      </a>
+      <nav class="page-header-navigation navigation">
+        <ul class="navigation-site-nav site-nav-list">
+          <li class="site-nav-item">
+            <a class="site-nav-link" href="#">Главная</a>
+          </li>
+          <li class="site-nav-item">
+            <a class="site-nav-link" href="#">О Седоне</a>
+          </li>
+          <li class="site-nav-item">
+            <a class="site-nav-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-user-nav user-nav-list">
+          <li class="user-nav-item">
+            <a class="user-nav-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="user-nav-item">
+            <a class="user-nav-link" href="#">
+              <span class="visually-hidden">
+                Избранное
+              </span>
+              <span>12</span>
+            </a>
+          </li>
+          <li class="user-nav-item">
+            <a class="user-nav-link" href="#">
+              <span class="visually-hidden">
+                Хочу сюда!
+              </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main-index">
+      <section class="hero">
+        <h1 class="visually-hidden">Седона - город в Аризоне</h1>
+        <img class="hero-image" src="#" alt="Горный пейзаж Седоны">
+      </section>
+      <section class="advantages" data-test="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <p class="advantages-leed">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <ul class="advantages-list">
+          <li class="advantages-item advantages-item-illustrated">
+            <div class="advantages-item-text">
+              <h3 class="advantages-item-title">Настоящий городок</h3>
+              <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
+            <img class="advantages-item-image" src="#" alt="Панорама одной из улиц Седоны">
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-item-text">
+              <h3 class="advantages-item-title">Небольшая площадь</h3>
+              <p class="advantages-item-description">Все достопримечательности находятся очень близко</p>
+            </div>
+          </li>
+          <li class="advantages-item advantages-item-centered">
+            <div class="advantages-item-text">
+              <h3 class="advantages-item-title">Красивая дорога</h3>
+              <p class="advantages-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-item-text">
+              <h3 class="advantages-item-title">Мало туристов</h3>
+              <p class="advantages-item-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </div>
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-item-text">
+              <h3 class="advantages-item-title">Там есть мост дьявола</h3>
+              <p class="advantages-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+            <img class="advantages-item-image" src="#" alt="Панорама горного ущелья Седоны">
+          </li>
+        </ul>
+      </section>
+      <section class="service" data-test="service">
+        <h2 class="service-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p class="service-description">Опытный персонал и качественное обслуживание!</p>
+        <ul class="service-list">
+          <li class="service-item">
+            <h3 class="service-item-title">Жильё</h3>
+            <p class="service-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="service-item">
+            <h3 class="service-item-title">Еда</h3>
+            <p class="service-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="service-item">
+            <h3 class="service-item-title">Сувениры</h3>
+            <p class="service-item-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="search" data-test="search">
+        <h2 class="search-title">Заинтересовались?</h2>
+        <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
+          в Седоне</p>
+        <button class="search-button button" type="button">Поиск гостиницы в Седоне</button>
+      </section>
+      <section class="subscription" data-test="subscription">
+        <h2 class="subscription-title">Подпишитесь на рассылку</h2>
+        <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="subscription-email">Введите Ваш e-mail для подписки:</label>
+          <input class="subscription-input" type="email" name="subscription-email" id="subscription-email"
+            placeholder="Ваш e-mail" required>
+          <button class="subscription-button button" type="submit">Подписаться</button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <ul class="page-footer-social social-list">
+        <li class="social-item">
+          <a class="social-link" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Группа Вконтакте</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Канал в Телеграм</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Канал в Ютуб</span>
+          </a>
+        </li>
+      </ul>
+      <a class="page-footer-phone contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="page-footer-logo site-author" href="https://htmlacademy.ru/" target="_blank">
+        <span class="visually-hidden">Сайт HTML Academy</span>
+      </a>
+    </footer>
 
   </body>
+
 </html>
