--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
         <img class="logo-image" src="#" alt="Логотип города Седона">
       </a>
       <nav class="page-header-navigation navigation">
-        <ul class="navigation-site-nav site-nav-list">
-          <li class="site-nav-item">
-            <a class="site-nav-link" href="#">Главная</a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Главная</a>
           </li>
-          <li class="site-nav-item">
-            <a class="site-nav-link" href="#">О Седоне</a>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
           </li>
-          <li class="site-nav-item">
-            <a class="site-nav-link" href="catalog.html">Гостиницы</a>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-user-nav user-nav-list">
-          <li class="user-nav-item">
-            <a class="user-nav-link" href="#">
+        <ul class="navigation-user-list">
+          <li class="navigation-user-item">
+            <a class="navigation-user-link" href="#">
               <span class="visually-hidden">
                 Поиск
               </span>
             </a>
           </li>
-          <li class="user-nav-item">
+          <li class="navigation-user-item">
             <a class="user-nav-link" href="#">
               <span class="visually-hidden">
                 Избранное
@@ -39,8 +39,8 @@
               <span>12</span>
             </a>
           </li>
-          <li class="user-nav-item">
-            <a class="user-nav-link" href="#">
+          <li class="navigation-user-item">
+            <a class="navigation-user-link" href="#">
               <span class="visually-hidden">
                 Хочу сюда!
               </span>
@@ -73,7 +73,7 @@
               <p class="advantages-item-description">Все достопримечательности находятся очень близко</p>
             </div>
           </li>
-          <li class="advantages-item advantages-item-centered">
+          <li class="advantages-item">
             <div class="advantages-item-text">
               <h3 class="advantages-item-title">Красивая дорога</h3>
               <p class="advantages-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
