Добавляет разметку страниц

--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
           </a>
         </li>
       </ul>
-      <a class="page-footer-phone contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <address class="contacts-address">
+        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </address>
       <a class="page-footer-logo site-author" href="https://htmlacademy.ru/" target="_blank">
         <span class="visually-hidden">Сайт HTML Academy</span>
       </a>
