--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </a>
           </li>
           <li class="navigation-user-item">
-            <a class="user-nav-link" href="#">
+            <a class="navigation-user-link" href="#">
               <span class="visually-hidden">
                 Избранное
               </span>
