Добавляет разметку страниц

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </main>
 
     <footer class="page-footer">
-      <ul class="page-footer-social social-list">
+      <ul class="social-list">
         <li class="social-item">
           <a class="social-link" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Группа Вконтакте</span>
