Добавляет разметку страниц (рефакторинг)

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <body>
     <header class="page-header">
-      <a class="page-header-logo" href="index.html" aria-current="page">
-        <img class="logo-image" src="#" alt="Логотип города Седона">
+      <a class="header-logo" href="index.html" aria-current="page">
+        <img src="#" alt="Логотип города Седона">
       </a>
-      <nav class="page-header-navigation navigation">
+      <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
@@ -23,135 +23,135 @@
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-user-list">
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">
-              <span class="visually-hidden">
-                Поиск
-              </span>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">
-              <span class="visually-hidden">
-                Избранное
-              </span>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Избранное</span>
               <span>12</span>
             </a>
           </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">
-              <span class="visually-hidden">
-                Хочу сюда!
-              </span>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Хочу сюда</span>
             </a>
           </li>
         </ul>
       </nav>
     </header>
-
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">Седона - город в Аризоне</h1>
-        <img class="hero-image" src="#" alt="Горный пейзаж Седоны">
+        <img class="logo" src="#" alt="Горный пейзаж Седоны">
       </section>
-      <section class="advantages" data-test="advantages">
+      <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-        <p class="advantages-leed">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages-lead">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
-          <li class="advantages-item advantages-item-illustrated">
-            <div class="advantages-item-text">
-              <h3 class="advantages-item-title">Настоящий городок</h3>
-              <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <li class="advantages-item">
+            <div class="advantages-text">
+              <h3 class="advantages-text-title">Настоящий городок</h3>
+              <p class="advantages-text-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <img class="advantages-item-image" src="#" alt="Панорама одной из улиц Седоны">
+            <img class="advantages-image" src="#" alt="Панорама одной из улиц Седоны">
           </li>
           <li class="advantages-item">
-            <div class="advantages-item-text">
-              <h3 class="advantages-item-title">Небольшая площадь</h3>
-              <p class="advantages-item-description">Все достопримечательности находятся очень близко</p>
-            </div>
-          </li>
-          <li class="advantages-item">
-            <div class="advantages-item-text">
-              <h3 class="advantages-item-title">Красивая дорога</h3>
-              <p class="advantages-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <div class="advantages-text">
+              <h3 class="advantages-text-title">Небольшая площадь</h3>
+              <p class="advantages-text-description">Все достопримечательности находятся очень близко</p>
             </div>
           </li>
           <li class="advantages-item">
-            <div class="advantages-item-text">
-              <h3 class="advantages-item-title">Мало туристов</h3>
-              <p class="advantages-item-description">Большинство едет в Гранд Каньон и толпится там</p>
+            <div class="advantages-text">
+              <h3 class="advantages-text-title">Красивая дорога</h3>
+              <p class="advantages-text-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </li>
           <li class="advantages-item">
-            <div class="advantages-item-text">
-              <h3 class="advantages-item-title">Там есть мост дьявола</h3>
-              <p class="advantages-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <div class="advantages-text">
+              <h3 class="advantages-text-title">Мало туристов</h3>
+              <p class="advantages-text-description">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
-            <img class="advantages-item-image" src="#" alt="Панорама горного ущелья Седоны">
+          </li>
+          <li class="advantages-item">
+            <div class="advantages-text">
+              <h3 class="advantages-text-title">Там есть мост дьявола</h3>
+              <p class="advantages-text-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+            <img class="advantages-image" src="#" alt="Ущелье Седоны">
           </li>
         </ul>
       </section>
-      <section class="service" data-test="service">
-        <h2 class="service-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p class="service-description">Опытный персонал и качественное обслуживание!</p>
+      <section class="service">
+        <h2 class="visually-hidden">Услуги</h2>
+        <p class="service-promo">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+        <p class="service-about">Опытный персонал и качественное обслуживание!</p>
         <ul class="service-list">
           <li class="service-item">
-            <h3 class="service-item-title">Жильё</h3>
-            <p class="service-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <h3 class="service-title">Жильё</h3>
+            <p class="service-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="service-item">
-            <h3 class="service-item-title">Еда</h3>
-            <p class="service-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <h3 class="service-title">Еда</h3>
+            <p class="service-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="service-item">
-            <h3 class="service-item-title">Сувениры</h3>
-            <p class="service-item-description">Не только китайского, но и настоящего местного производства!</p>
+            <h3 class="service-title">Сувениры</h3>
+            <p class="service-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
-      <section class="search" data-test="search">
+      <section class="search">
         <h2 class="search-title">Заинтересовались?</h2>
         <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
           в Седоне</p>
-        <button class="search-button button" type="button">Поиск гостиницы в Седоне</button>
+        <button class="button search-button" type="button">Поиск гостиницы в Седоне</button>
       </section>
-      <section class="subscription" data-test="subscription">
+      <section class="subscription">
         <h2 class="subscription-title">Подпишитесь на рассылку</h2>
         <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label class="visually-hidden" for="subscription-email">Введите Ваш e-mail для подписки:</label>
-          <input class="subscription-input" type="email" name="subscription-email" id="subscription-email"
+          <label class="visually-hidden" for="subscription-email">Введите Ваш e-mail для подписки</label>
+          <input class="subscription-input" type="email" id="subscription-email" name="subscription-email"
             placeholder="Ваш e-mail" required>
-          <button class="subscription-button button" type="submit">Подписаться</button>
+          <button class="button subscription-button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
 
     <footer class="page-footer">
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="social-link" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Группа Вконтакте</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Канал в Телеграм</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Канал в Ютуб</span>
-          </a>
-        </li>
-      </ul>
-      <address class="contacts-address">
-        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </address>
-      <a class="page-footer-logo site-author" href="https://htmlacademy.ru/" target="_blank">
+      <section class="social">
+        <h2 class="visually-hidden">Мы в социальных сетях</h2>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Группа Вконтакте</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Канал в Телеграм</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Канал в Ютуб</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="contacts">
+        <h2 class="visually-hidden">Наши контакты</h2>
+        <address class="contacts-address">
+          <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </address>
+      </section>
+      <a class="footer-logo site-author" href="https://htmlacademy.ru/" target="_blank">
         <span class="visually-hidden">Сайт HTML Academy</span>
       </a>
     </footer>
