--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <a class="header-logo" href="index.html" aria-current="page">
         <img src="#" alt="Логотип города Седона">
       </a>
@@ -44,7 +44,7 @@
       </nav>
     </header>
 
-    <main class="main-catalog">
+    <main class="main-catalog" data-test="main">
       <header class="catalog-header">
         <h1 class="catalog-header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </header>
-      <section class="catalog-filter">
+      <section class="catalog-filter" data-test="filter">
         <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="post">
           <fieldset class="form-filter-group">
             <legend class="form-filter-title">Инфраструктура:</legend>
@@ -117,7 +117,7 @@
           </div>
         </form>
       </section>
-      <section class="catalog-results">
+      <section class="catalog-results" data-test="catalog">
         <h2 class="catalog-results-title">Найдено гостиниц: 38</h2>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвые</option>
@@ -244,19 +244,19 @@
           </li>
         </ul>
       </section>
-      <section class="subscription">
-        <h2 class="subscription-title">Подпишитесь на рассылку</h2>
-        <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label class="visually-hidden" for="subscription-email">Введите Ваш e-mail для подписки</label>
-          <input class="subscription-input" type="email" id="subscription-email" name="subscription-email"
+      <section class="subscribe" data-test="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="subscribe-email">Введите Ваш e-mail для подписки</label>
+          <input class="subscribe-input" type="email" id="subscribe-email" name="subscribe-email"
             placeholder="Ваш e-mail" required>
-          <button class="button subscription-button" type="submit">Подписаться</button>
+          <button class="button subscribe-button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer" data-test="footer">
       <section class="social">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="social-list">
