Добавляет контентные изображения в разметку

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header" data-test="header">
       <a class="header-logo" href="index.html" aria-current="page">
-        <img src="#" alt="Логотип города Седона">
+        <img src="images/logo.svg" width="140" height="70" alt="Логотип города Седона">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -144,7 +144,7 @@
         <ul class="result-list">
           <li class="result-card">
             <a class="result-card-link" href="#">
-              <img class="result-card-image" src="#" alt="Звёздное небо сквозь ущелье">
+              <img class="result-card-image" src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Звёздное небо сквозь ущелье">
               <h3 class="result-card-title">Amara Resort & Spa</h3>
               <div class="result-card-info">
                 <span class="card-type">Гостиница</span>
@@ -164,7 +164,7 @@
           </li>
           <li class="result-card">
             <a class="result-card-link" href="#">
-              <img class="result-card-image" src="#" alt="Грозовое небо над горами">
+              <img class="result-card-image" src="images/catalog/hotel-2.jpg" width="300" height="212" alt="Грозовое небо над горами">
               <h3 class="result-card-title">Villas at Poco Diablo</h3>
               <div class="result-card-info">
                 <span class="card-type">Гостиница</span>
@@ -184,7 +184,7 @@
           </li>
           <li class="result-card">
             <a class="result-card-link" href="#">
-              <img class="result-card-image" src="#" alt="Вечерняя панорама горного хребта">
+              <img class="result-card-image" src="images/catalog/hotel-3.jpg" width="300" height="212" alt="Вечерняя панорама горного хребта">
               <h3 class="result-card-title">Desert Quail Inn</h3>
               <div class="result-card-info">
                 <span class="card-type">Гостиница</span>
@@ -204,7 +204,7 @@
           </li>
           <li class="result-card">
             <a class="result-card-link" href="#">
-              <img class="result-card-image" src="#" alt="Звёздные сумерки над горным хребтом">
+              <img class="result-card-image" src="images/catalog/hotel-4.jpg" width="300" height="212" alt="Звёздные сумерки над горным хребтом">
               <h3 class="result-card-title">GreenTree Inn</h3>
               <div class="result-card-info">
                 <span class="card-type">Гостиница</span>
