--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header" data-test="header">
       <a class="header-logo" href="index.html" aria-current="page">
-        <img src="#" alt="Логотип города Седона">
+        <img src="images/logo.svg" width="140" height="70" alt="Логотип города Седона">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -46,7 +46,7 @@
     <main class="main-index" data-test="main">
       <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Седона - город в Аризоне</h1>
-        <img class="logo" src="#" lang="en" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
+        <img class="hero-image" src="images/welcome.svg" width="458" height="352" lang="en" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
       </section>
       <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
@@ -58,7 +58,7 @@
               <h3 class="advantages-text-title">Настоящий городок</h3>
               <p class="advantages-text-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <img class="advantages-image" src="#" alt="Панорама одной из улиц Седоны">
+            <img class="advantages-image" src="images/photo-1.jpg" width="800" height="385" alt="Панорама одной из улиц Седоны">
           </li>
           <li class="advantages-item">
             <div class="advantages-text">
@@ -83,7 +83,7 @@
               <h3 class="advantages-text-title">Там есть мост дьявола</h3>
               <p class="advantages-text-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
-            <img class="advantages-image" src="#" alt="Ущелье Седоны">
+            <img class="advantages-image" src="images/photo-2.jpg" width="800" height="385" alt="Ущелье Седоны">
           </li>
         </ul>
       </section>
