Редактирует разметку каталога для валидации

--- a/catalog.html
+++ b/catalog.html
@@ -143,84 +143,68 @@
         </ul>
         <ul class="result-list">
           <li class="result-card">
-            <a class="result-card-link" href="#">
-              <img class="result-card-image" src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Звёздное небо сквозь ущелье">
-              <h3 class="result-card-title">Amara Resort & Spa</h3>
-              <div class="result-card-info">
-                <span class="card-type">Гостиница</span>
-                <span class="card-price">От 4000 ₽</span>
-              </div>
-              <div class="result-card-buttons">
-                <button class="button card-button" type="button">Подробнее</button>
-                <button class="button card-button" type="button">В избранное</button>
-              </div>
-              <div class="result-card-rating">
-                <div class="card-rating-stars four-stars">
-                  <span class="visually-hidden">4 звезды из 5</span>
-                </div>
-                <span class="card-rating-total">Рейтинг: 8,5</span>
-              </div>
+            <a class="card-link" href="#">
+              <img class="card-image" src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Звёздное небо сквозь ущелье">
             </a>
+            <a class="card-link" href="#">
+              <h3 class="card-title">Amara Resort & Spa</h3>
+            </a>
+            <p class="card-type">Гостиница</p>
+            <p class="card-price">От 4000 ₽</p>
+            <a class="card-details button button-primary" href="#">Подробнее</a>
+            <button class="card-fav button button-secondary" type="button">В избранное</button>
+            <p class="card-stars card-stars-four">
+              <span class="visually-hidden">4 звезды из 5</span>
+            </p>
+            <p class="card-rating">Рейтинг: 8,5</p>
           </li>
           <li class="result-card">
-            <a class="result-card-link" href="#">
-              <img class="result-card-image" src="images/catalog/hotel-2.jpg" width="300" height="212" alt="Грозовое небо над горами">
-              <h3 class="result-card-title">Villas at Poco Diablo</h3>
-              <div class="result-card-info">
-                <span class="card-type">Гостиница</span>
-                <span class="card-price">От 5000 ₽</span>
-              </div>
-              <div class="result-card-buttons">
-                <button class="button card-button" type="button">Подробнее</button>
-                <button class="button card-button card-button-favorite" type="button">В избранном</button>
-              </div>
-              <div class="result-card-rating">
-                <div class="card-rating-stars four-stars">
-                  <span class="visually-hidden">4 звезды из 5</span>
-                </div>
-                <span class="card-rating-total">Рейтинг: 9,2</span>
-              </div>
+            <a class="card-link" href="#">
+              <img class="card-image" src="images/catalog/hotel-2.jpg" width="300" height="212" alt="Грозовое небо над горами">
             </a>
+            <a class="card-link" href="#">
+              <h3 class="card-title">Villas at Poco Diablo</h3>
+            </a>
+            <p class="card-type">Гостиница</p>
+            <p class="card-price">От 5000 ₽</p>
+            <a class="card-details button button-primary" href="#">Подробнее</a>
+            <button class="card-fav button button-secondary" type="button">В избранное</button>
+            <p class="card-stars card-stars-four">
+              <span class="visually-hidden">4 звезды из 5</span>
+            </p>
+            <p class="card-rating">Рейтинг: 9,2</p>
           </li>
           <li class="result-card">
-            <a class="result-card-link" href="#">
-              <img class="result-card-image" src="images/catalog/hotel-3.jpg" width="300" height="212" alt="Вечерняя панорама горного хребта">
-              <h3 class="result-card-title">Desert Quail Inn</h3>
-              <div class="result-card-info">
-                <span class="card-type">Гостиница</span>
-                <span class="card-price">От 2500 ₽</span>
-              </div>
-              <div class="result-card-buttons">
-                <button class="button card-button" type="button">Подробнее</button>
-                <button class="button card-button" type="button">В избранное</button>
-              </div>
-              <div class="result-card-rating">
-                <div class="card-rating-stars three-stars">
-                  <span class="visually-hidden">3 звезды из 5</span>
-                </div>
-                <span class="card-rating-total">Рейтинг: 6,9</span>
-              </div>
+            <a class="card-link" href="#">
+              <img class="card-image" src="images/catalog/hotel-3.jpg" width="300" height="212" alt="Вечерняя панорама горного хребта">
             </a>
+            <a class="card-link" href="#">
+              <h3 class="card-title">Desert Quail Inn</h3>
+            </a>
+            <p class="card-type">Гостиница</p>
+            <p class="card-price">От 2500 ₽</p>
+            <a class="card-details button button-primary" href="#">Подробнее</a>
+            <button class="card-fav button button-secondary" type="button">В избранное</button>
+            <p class="card-stars card-stars-four">
+              <span class="visually-hidden">3 звезды из 5</span>
+            </p>
+            <p class="card-rating">Рейтинг: 6,9</p>
           </li>
           <li class="result-card">
-            <a class="result-card-link" href="#">
-              <img class="result-card-image" src="images/catalog/hotel-4.jpg" width="300" height="212" alt="Звёздные сумерки над горным хребтом">
-              <h3 class="result-card-title">GreenTree Inn</h3>
-              <div class="result-card-info">
-                <span class="card-type">Гостиница</span>
-                <span class="card-price">От 1500 ₽</span>
-              </div>
-              <div class="result-card-buttons">
-                <button class="button card-button" type="button">Подробнее</button>
-                <button class="button card-button" type="button">В избранное</button>
-              </div>
-              <div class="result-card-rating">
-                <div class="card-rating-stars two-stars">
-                  <span class="visually-hidden">2 звезды из 5</span>
-                </div>
-                <span class="card-rating-total">Рейтинг: 5,0</span>
-              </div>
+            <a class="card-link" href="#">
+              <img class="card-image" src="images/catalog/hotel-4.jpg" width="300" height="212" alt="Звёздные сумерки над горным хребтом">
             </a>
+            <a class="card-link" href="#">
+              <h3 class="card-title">GreenTree Inn</h3>
+            </a>
+            <p class="card-type">Гостиница</p>
+            <p class="card-price">От 1500 ₽</p>
+            <a class="card-details button button-primary" href="#">Подробнее</a>
+            <button class="card-fav button button-secondary" type="button">В избранное</button>
+            <p class="card-stars card-stars-four">
+              <span class="visually-hidden">2 звезды из 5</span>
+            </p>
+            <p class="card-rating">Рейтинг: 5,0</p>
           </li>
         </ul>
         <ul class="pagination">
